2012-05-26  Hans de Goede <hdegoede@redhat.com>

	* configure.in: configure: Fix building of dynamic user
	  interfaces

2011-12-30  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* COPYING: Remove due to autogenerated file
	* Makefile.am, autogen.sh: Add autogen.sh

2011-12-22  Hans de Goede <hdegoede@redhat.com>

	* configure.in: [PATCH 18/18] configure: Don't add -lX11 to
	  the generic LIBS
	  This stops timidity itself from depending on libX11 even
	  when build without any interfaces builtin which need libX11.
	  (revised by TAMUKI Shoichi)
	* interface/x_sherry.c: Fix to fit with libpng 1.5 and newer

2011-12-18  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* Makefile.in, aclocal.m4, autoconf/Makefile.in,
	  autoconf/config.guess, autoconf/config.sub,
	  autoconf/depcomp, autoconf/install-sh, autoconf/missing,
	  autoconf/mkinstalldirs, config.h.in, configs/Makefile.in,
	  configure, doc/C/Makefile.in, doc/Makefile.in,
	  doc/ja_JP.eucJP/Makefile.in, interface/Makefile.in,
	  interface/bitmaps/Makefile.in,
	  interface/motif_bitmaps/Makefile.in,
	  interface/pixmaps/Makefile.in, libarc/Makefile.in,
	  libunimod/Makefile.in, script/Makefile.in,
	  timidity/Makefile.in, utils/Makefile.in, windrv/Makefile.in:
	  Remove all the autogenerated files

2011-12-08  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/alsaseq_c.c: About 4 years ago, a simple patch was
	  merged, which disabled ALSA sequencer interface polling,
	  when it's not needed.  As a result, when using ALSA
	  sequencer interface (timidity -iA -B2,8 -q0/0), it comes to
	  cause a terrible sound.  That improves with "timidity -iA",
	  however the real-time response is too bad for practical use.
	  So, I reverted the patch as a workaround.  And then, I
	  applied yet another patch instead, which works fine.  See
	  http://fedev.blogspot.com/2007/07/timidity-power-usage.html

2011-12-07  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c: About 6 years ago, a simple patch was